# lab07

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml
directories/directory1/directory1/: file2.txt
directories/directory2/: file1.txt  file3.txt
