cmake_minimum_required(VERSION 3.10)
set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
set(PROJECT_VERSION 0.0.${PATCH_VERSION})
project(lab07 VERSION ${PROJECT_VERSION})
add_executable(lab07 main.cpp)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
    else()   
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
endif()
install(TARGETS lab07 DESTINATION bin)
set(CPACK_GENERATOR "ZIP")
set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
set(CPACK_PACKAGE_NAME "lab07")
include(CPack)
find_package(Boost REQUIRED COMPONENTS filesystem program_options)
# Проверяем, что Boost найден успешно
if(Boost_FOUND)
    # Добавляем необходимые include директории
    target_include_directories(lab07 PRIVATE ${Boost_INCLUDE_DIRS})
    # Линкуем необходимые библиотеки Boost
    target_link_libraries(lab07 PRIVATE ${Boost_LIBRARIES})
else()
    message(FATAL_ERROR "Boost not found! Please install Boost and make sure it's in your system's include and library paths.")
endif()
